--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.24.1",
+    "flag-icons": "^7.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
